refatorando orcamento